[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player_fase3/top_down_F3/projetil_player_TD3.gd" type="Script" id=1]
[ext_resource path="res://inimigos/projeteis_inimigos/bala_arma/bullet1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.87111
height = 15.4116

[node name="projetil_player_TD" type="Area2D" groups=[
"projetil_player",
]]
rotation = 0.00600927
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"projetil_player",
]]
rotation = 1.5708
shape = SubResource( 1 )

[node name="sprite_projetil" type="Sprite" parent="."]
modulate = Color( 0.67451, 0.666667, 0, 1 )
self_modulate = Color( 1, 1, 0.960784, 1 )
position = Vector2( 73.5819, -7.04949 )
scale = Vector2( 2.3, 0.5 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.75388, 0 )
scale = Vector2( 1.96813, 1 )
[connection signal="area_entered" from="." to="." method="_on_projetil_player_TD_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_projetil_player_TD_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
